...
                MimeTypeMap.getSingleton()
                    .getMimeTypeFromExtension(uri.path?.substringAfterLast(".") ?: ""))
        else Log.d("DocumentList", "No file selected")
      }

  Scaffold(
      modifier = Modifier.testTag("documentListScreen"),
      floatingActionButton = {
        var toggled by remember { mutableStateOf(false) }

        Column(horizontalAlignment = Alignment.End) {
          if (toggled) {
            Column(horizontalAlignment = Alignment.End, verticalArrangement = Arrangement.Bottom) {
              ExtendedFloatingActionButton(
                  text = {
                    Text(
                        "Import from local files",
                        modifier = Modifier.testTag("importLocalFileButtonText"))
                  },
                  icon = { Icon(Icons.Default.UploadFile, contentDescription = "Add Document") },
                  onClick = { filePickerLauncher.launch(DocumentFileFormat.ACCEPTED_MIME_TYPE) },
                  modifier = Modifier.testTag("importLocalFileButton"))

              Spacer(modifier = Modifier.height(8.dp))

              ExtendedFloatingActionButton(
                  text = {
                    Text("Scan with camera", modifier = Modifier.testTag("scanCamButtonText"))
                  },
                  icon = {
                    Icon(Icons.Default.DocumentScanner, contentDescription = "Add Document")
                  },
                  onClick = {
                    scanner.getStartScanIntent(context.findActivity()!!).addOnSuccessListener {
                        intentSender ->
                      scannerLauncher.launch(IntentSenderRequest.Builder(intentSender).build())
                    }
                  },
                  modifier = Modifier.testTag("scanCamButton"))

              Spacer(modifier = Modifier.height(8.dp))

              FloatingActionButton(
                  onClick = { toggled = !toggled }, modifier = Modifier.testTag("dropDownButton")) {
                    Icon(Icons.Default.ArrowDropDown, contentDescription = "Add Document")
                  }
            }
          } else {
            FloatingActionButton(
                onClick = { toggled = !toggled }, modifier = Modifier.testTag("plusButton")) {
                  Icon(Icons.Default.Add, contentDescription = "Add Document")
                }
          }
        }
      }) { paddingValue ->
        Box(modifier = Modifier.fillMaxSize()) {
...
              enter = fadeIn(animationSpec = tween(50)),
              exit = fadeOut(animationSpec = tween(500))) {
                CircularProgressIndicator(
                    modifier =
                        Modifier // Adjust spinner size fifth of screen height
                            .align(Alignment.Center) // Center the spinner
                            .testTag("loadingSpinner"),
                    color = MaterialTheme.colorScheme.primary,
                    strokeWidth = 10.dp)
              }
        }
      }
}
...
