...
  val listOfDestinations =
      listOf(
          BottomNavigationItem("Activities", Icons.Default.Home),
          BottomNavigationItem("Map", Icons.Default.Place))

  Scaffold(
      modifier = Modifier.testTag("travelActivitiesScreen"),
      topBar = {
        TopAppBar(
            title = { Text("Travel", Modifier.testTag("travelTitle")) },
            navigationIcon = {
              IconButton(
                  onClick = { navigationActions.goBack() },
...
                    .padding(pd)
                    .testTag("activityColumn")) {
              if (listOfActivities.value.isEmpty()) {
                item {
                  Text(
                      text = "No activities planned for this trip",
                      modifier = Modifier.testTag("emptyTravel"))
                }
              } else {
                items(listOfActivities.value.size) { idx ->
                  ActivityItem(
                      listOfActivities.value[idx],
                      onClick = {
...
